# assignment-supermomos

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.sh
.github/workflows/: master-protection.yml
alembic/: env.py
alembic/versions/: 4e5294d42d67_init_basic_data_model.py  655d9213c227_backpopulate_number_events_for_users.py  e72f9c4b85da_seeding_if_data_is_not_available.py  f6db50dd579a_change_user_database_to_have_.py
scripts/: seeding.py  sync.py
src/: container.py  custom_app.py  main.py
src/api/routers/: common.py
src/core/: config.py  db.py  logger.py
src/models/: __init__.py  base.py  event.py  registration.py  user.py
src/repos/: __init__.py  user.py
src/schemas/: base_response.py
src/schemas/dto/: user.py
src/schemas/exceptions/: base.py
src/services/: user.py
